<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_export_pdf"
        android:title="@string/menu_export_pdf"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_export_backup"
        android:title="@string/menu_export_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_import_backup"
        android:title="@string/menu_import_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_upgrade"
        android:title="@string/menu_upgrade"
        app:showAsAction="never" />
</menu>
